// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regana #analyse #declarations analyse should work with variable declarations 1`] = `
"{
  \\"start\\": 0,
  \\"end\\": 14,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 14,
    \\"parentScope\\": null,
    \\"file\\": \\"File_7\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_7\\",
  \\"segments\\": {
    \\"NumericLiteral_9\\": {
      \\"uses\\": [],
      \\"start\\": 12,
      \\"end\\": 13,
      \\"id\\": \\"NumericLiteral_9\\"
    },
    \\"VariableDeclarator_8\\": {
      \\"uses\\": [
        \\"NumericLiteral_9\\"
      ],
      \\"start\\": 5,
      \\"end\\": 13,
      \\"id\\": \\"VariableDeclarator_8\\"
    }
  },
  \\"exposes\\": {},
  \\"pointers\\": {
    \\"test\\": \\"VariableDeclarator_8\\"
  }
}"
`;

exports[`regana #analyse #declarations analyse should work with variable declarations 2`] = `
"{
  \\"start\\": 0,
  \\"end\\": 14,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 14,
    \\"parentScope\\": null,
    \\"file\\": \\"File_10\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_10\\",
  \\"segments\\": {
    \\"NumericLiteral_12\\": {
      \\"uses\\": [],
      \\"start\\": 12,
      \\"end\\": 13,
      \\"id\\": \\"NumericLiteral_12\\"
    },
    \\"VariableDeclarator_11\\": {
      \\"uses\\": [
        \\"NumericLiteral_12\\"
      ],
      \\"start\\": 5,
      \\"end\\": 13,
      \\"id\\": \\"VariableDeclarator_11\\"
    }
  },
  \\"exposes\\": {},
  \\"pointers\\": {
    \\"test\\": \\"VariableDeclarator_11\\"
  }
}"
`;

exports[`regana #analyse #declarations analyse should work with variable declarations 3`] = `
"{
  \\"start\\": 0,
  \\"end\\": 16,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 16,
    \\"parentScope\\": null,
    \\"file\\": \\"File_13\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_13\\",
  \\"segments\\": {
    \\"NumericLiteral_15\\": {
      \\"uses\\": [],
      \\"start\\": 14,
      \\"end\\": 15,
      \\"id\\": \\"NumericLiteral_15\\"
    },
    \\"VariableDeclarator_14\\": {
      \\"uses\\": [
        \\"NumericLiteral_15\\"
      ],
      \\"start\\": 7,
      \\"end\\": 15,
      \\"id\\": \\"VariableDeclarator_14\\"
    }
  },
  \\"exposes\\": {},
  \\"pointers\\": {
    \\"test\\": \\"VariableDeclarator_14\\"
  }
}"
`;

exports[`regana #analyse #declarations analyse should work with variable declarations 4`] = `
"{
  \\"start\\": 0,
  \\"end\\": 29,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 29,
    \\"parentScope\\": null,
    \\"file\\": \\"File_16\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_16\\",
  \\"segments\\": {
    \\"NumericLiteral_18\\": {
      \\"uses\\": [],
      \\"start\\": 14,
      \\"end\\": 15,
      \\"id\\": \\"NumericLiteral_18\\"
    },
    \\"VariableDeclarator_17\\": {
      \\"uses\\": [
        \\"NumericLiteral_18\\"
      ],
      \\"start\\": 7,
      \\"end\\": 15,
      \\"id\\": \\"VariableDeclarator_17\\"
    },
    \\"NumericLiteral_20\\": {
      \\"uses\\": [],
      \\"start\\": 27,
      \\"end\\": 28,
      \\"id\\": \\"NumericLiteral_20\\"
    },
    \\"VariableDeclarator_19\\": {
      \\"uses\\": [
        \\"NumericLiteral_20\\"
      ],
      \\"start\\": 17,
      \\"end\\": 28,
      \\"id\\": \\"VariableDeclarator_19\\"
    }
  },
  \\"exposes\\": {},
  \\"pointers\\": {
    \\"test\\": \\"VariableDeclarator_17\\",
    \\"another\\": \\"VariableDeclarator_19\\"
  }
}"
`;

exports[`regana #analyse analyse should throw error with invalid input 1`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should throw error with invalid input 2`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should throw error with invalid input 3`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should throw error with invalid input 4`] = `"ENOENT: no such file or directory, stat ''"`;

exports[`regana #analyse analyse should throw error with invalid input 5`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should throw error with invalid input 6`] = `"path must be a string or Buffer"`;

exports[`regana #analyse analyse should work with valid input 1`] = `
"{
  \\"start\\": 0,
  \\"end\\": 21,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 21,
    \\"parentScope\\": null,
    \\"file\\": \\"File_0\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_0\\",
  \\"segments\\": {
    \\"NumericLiteral_2\\": {
      \\"uses\\": [],
      \\"start\\": 19,
      \\"end\\": 20,
      \\"id\\": \\"NumericLiteral_2\\"
    },
    \\"VariableDeclarator_1\\": {
      \\"uses\\": [
        \\"NumericLiteral_2\\"
      ],
      \\"start\\": 7,
      \\"end\\": 20,
      \\"id\\": \\"VariableDeclarator_1\\"
    }
  },
  \\"exposes\\": {},
  \\"pointers\\": {
    \\"testValue\\": \\"VariableDeclarator_1\\"
  }
}"
`;

exports[`regana #analyse analyse should work with valid input 2`] = `
"{
  \\"start\\": 0,
  \\"end\\": 32,
  \\"parentScope\\": {
    \\"start\\": 0,
    \\"end\\": 32,
    \\"parentScope\\": null,
    \\"file\\": \\"File_3\\",
    \\"segments\\": {},
    \\"exposes\\": {},
    \\"pointers\\": {}
  },
  \\"file\\": \\"File_3\\",
  \\"segments\\": {
    \\"NumericLiteral_5\\": {
      \\"uses\\": [],
      \\"start\\": 13,
      \\"end\\": 14,
      \\"id\\": \\"NumericLiteral_5\\"
    },
    \\"VariableDeclarator_4\\": {
      \\"uses\\": [
        \\"NumericLiteral_5\\"
      ],
      \\"start\\": 6,
      \\"end\\": 14,
      \\"id\\": \\"VariableDeclarator_4\\"
    },
    \\"ExportNamedDeclaration_6\\": {
      \\"uses\\": [
        \\"VariableDeclarator_4\\"
      ],
      \\"start\\": 16,
      \\"end\\": 32,
      \\"id\\": \\"ExportNamedDeclaration_6\\"
    }
  },
  \\"exposes\\": {
    \\"test\\": \\"ExportNamedDeclaration_6\\"
  },
  \\"pointers\\": {
    \\"test\\": \\"VariableDeclarator_4\\"
  }
}"
`;
